Bug 413018 - Plasma crashes in slideshow
Summary: Plasma crashes in slideshow
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.17.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: drkonqi
: 412462 413016 413059 413082 413099 413139 413140 413141 413155 413159 413166 413193 413219 413225 413252 413273 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-16 07:01 UTC by Xwang
Modified: 2019-12-22 12:12 UTC (History)
26 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.39 KB, text/plain)
2019-10-16 11:39 UTC, Xwang
Details
Overlay betweer folder view and wallpaper image (625.80 KB, image/png)
2019-10-16 11:44 UTC, Xwang
Details
New crash information added by DrKonqi (17.75 KB, patch)
2019-10-20 04:52 UTC, akm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xwang 2019-10-16 07:01:43 UTC
Application: plasmashell (5.17.0)

Qt Version: 5.13.1
Frameworks Version: 5.63.0
Operating System: Linux 5.3.6-arch1-1-ARCH x86_64
Distribution: Arch Linux

-- Information about the crash:
- What I was doing when the application crashed:
Nothing, the pc was on, but I was watching TV

- Unusual behavior I noticed:
Plasma crashed, the panel disappeared, then plasma restarted and the panel was automatically on again.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff205476c80 (LWP 793))]

Thread 9 (Thread 0x7ff1d78ff700 (LWP 1034)):
#0  0x00007ff2095aec45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007ff20a0bd660 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /usr/lib/libQt5Core.so.5
#2  0x00007ff20a0bd752 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#3  0x00007ff20bd42dad in  () at /usr/lib/libQt5Quick.so.5
#4  0x00007ff20bd4305e in  () at /usr/lib/libQt5Quick.so.5
#5  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#6  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#7  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7ff1e4977700 (LWP 993)):
#0  0x00007ff2095aec45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007ff20a0bd660 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /usr/lib/libQt5Core.so.5
#2  0x00007ff20a0bd752 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#3  0x00007ff20bd42dad in  () at /usr/lib/libQt5Quick.so.5
#4  0x00007ff20bd4305e in  () at /usr/lib/libQt5Quick.so.5
#5  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#6  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#7  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7ff1e5830700 (LWP 986)):
#0  0x00007ff209d3242c in read () at /usr/lib/libc.so.6
#1  0x00007ff2083d59f0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff208423a41 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff208425128 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007ff208425251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007ff20a2dda1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007ff20a2844ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#7  0x00007ff20a0b6385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#8  0x00007ff1e624113b in KCupsConnection::run() () at /usr/lib/libkcupslib.so
#9  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#10 0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#11 0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7ff1efb01700 (LWP 980)):
#0  0x00007ff208424a5e in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#1  0x00007ff2084250a6 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff208425251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff20a2dda1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007ff20a2844ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007ff20a0b6385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007ff20bcb76eb in  () at /usr/lib/libQt5Quick.so.5
#7  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7ff1ef300700 (LWP 975)):
#0  0x00007ff2095aec45 in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007ff20a0bd660 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () at /usr/lib/libQt5Core.so.5
#2  0x00007ff20a0bd752 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#3  0x00007ff20bd42dad in  () at /usr/lib/libQt5Quick.so.5
#4  0x00007ff20bd4305e in  () at /usr/lib/libQt5Quick.so.5
#5  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#6  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#7  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7ff202561700 (LWP 944)):
#0  0x00007ff209d369ef in poll () at /usr/lib/libc.so.6
#1  0x00007ff208425180 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff208425251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff20a2dda1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007ff20a2844ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007ff20a0b6385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007ff20b9d7849 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7ff2037e8700 (LWP 807)):
#0  0x00007ff209d3242c in read () at /usr/lib/libc.so.6
#1  0x00007ff2083d59f0 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff208423a41 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff208425128 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007ff208425251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007ff20a2dda1c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007ff20a2844ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#7  0x00007ff20a0b6385 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#8  0x00007ff20ab57b37 in  () at /usr/lib/libQt5DBus.so.5
#9  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#10 0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#11 0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7ff2045d6700 (LWP 806)):
#0  0x00007ff209d369ef in poll () at /usr/lib/libc.so.6
#1  0x00007ff20c149630 in  () at /usr/lib/libxcb.so.1
#2  0x00007ff20c14b2db in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007ff204f69101 in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007ff20a0b75b0 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007ff2095a84cf in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007ff209d412d3 in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7ff205476c80 (LWP 793)):
[KCrash Handler]
#6  0x00007ff20a253771 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007ff20a2552df in  () at /usr/lib/libQt5Core.so.5
#8  0x00007ff20a25770a in  () at /usr/lib/libQt5Core.so.5
#9  0x00007ff20a257d4c in  () at /usr/lib/libQt5Core.so.5
#10 0x00007ff20a257f93 in QSortFilterProxyModel::invalidate() () at /usr/lib/libQt5Core.so.5
#11 0x00007ff1efc8124d in  () at /usr/lib/qt/qml/org/kde/plasma/wallpapers/image/libplasma_wallpaper_imageplugin.so
#12 0x00007ff1efc812d4 in  () at /usr/lib/qt/qml/org/kde/plasma/wallpapers/image/libplasma_wallpaper_imageplugin.so
#13 0x00007ff20a2b1b70 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#14 0x00007ff20a2beb78 in QTimer::timeout(QTimer::QPrivateSignal) () at /usr/lib/libQt5Core.so.5
#15 0x00007ff20a2b23e5 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#16 0x00007ff20adc44f5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#17 0x00007ff20adcde11 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#18 0x00007ff20a2859c2 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#19 0x00007ff20a2dcd9d in QTimerInfoList::activateTimers() () at /usr/lib/libQt5Core.so.5
#20 0x00007ff20a2dd66a in  () at /usr/lib/libQt5Core.so.5
#21 0x00007ff2084233fe in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#22 0x00007ff208425211 in  () at /usr/lib/libglib-2.0.so.0
#23 0x00007ff208425251 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#24 0x00007ff20a2dda03 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#25 0x00007ff20a2844ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#26 0x00007ff20a28c326 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#27 0x00005602fe474dc9 in  ()
#28 0x00007ff209c69153 in __libc_start_main () at /usr/lib/libc.so.6
#29 0x00005602fe47522e in _start ()
[Inferior 1 (process 793) detached]

Possible duplicates by query: bug 413016, bug 413011, bug 412977, bug 412947, bug 412938.

Reported using DrKonqi
Comment 1 Kai Uwe Broulik 2019-10-16 07:23:42 UTC
Are you using a slideshow wallpaper?
Comment 2 Xwang 2019-10-16 07:53:10 UTC
Yes, I am.
Comment 3 Xwang 2019-10-16 11:39:52 UTC
Created attachment 123232 [details]
New crash information added by DrKonqi

plasmashell (5.17.0) using Qt 5.13.1

- What I was doing when the application crashed:
The pc was open and I was not in front of it.
Going back to my pc I've found the bug tracker open.

- Unusual behavior I noticed:
Since the last update I've noticed that a folder view plasmoid continues to extend over the wallpaper even though I continue to try to reduce its height in order to avoid.

-- Backtrace (Reduced):
#6  0x00007fb3b3b0d771 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fb3b3b0f2df in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fb3b3b1170a in  () at /usr/lib/libQt5Core.so.5
#9  0x00007fb3b3b11d4c in  () at /usr/lib/libQt5Core.so.5
#10 0x00007fb3b3b11f93 in QSortFilterProxyModel::invalidate() () at /usr/lib/libQt5Core.so.5
Comment 4 Xwang 2019-10-16 11:44:25 UTC
Created attachment 123233 [details]
Overlay betweer folder view and wallpaper image

This didn't happened with the previous plasma version because I was able to resize the folder view (so maybe the plasma crash did not happened with the previous version only because there wasn't any overlay)
Comment 5 Kai Uwe Broulik 2019-10-16 12:11:37 UTC
Can you please install debug symbols for plasma-workspace and qt core so we get a better understanding of what's going on
Comment 6 Xwang 2019-10-16 13:00:53 UTC
(In reply to Kai Uwe Broulik from comment #5)
> Can you please install debug symbols for plasma-workspace and qt core so we
> get a better understanding of what's going on

I am trying.
As far as I've understood to do that in archlinux I've to compile from sources the packages with specific options and install them and then wait fr the next time the issue happens again.
The problem is that I've found the plasma-workspace package, but not the qt core (I've tried searching for qt-core).
Do you now the name of the package?
Comment 7 David Redondo 2019-10-16 14:43:03 UTC
Are you using random order?
I think I could reproduce it (also with Qt 5.13.1)
#0  0x00007ffff1f49dc0 in QSortFilterProxyModelPrivate::build_source_to_proxy_mapping(QVector<int> const&, QVector<int>&) const (proxy_to_source=..., source_to_proxy=..., this=0x5555560e8dc0) at itemmodels/qsortfilterproxymodel.cpp:1184
#1  0x00007ffff1f4ba5f in QSortFilterProxyModelPrivate::create_mapping(QModelIndex const&) const (this=this@entry=0x5555560e8dc0, source_parent=...) at itemmodels/qsortfilterproxymodel.cpp:522
#2  0x00007ffff1f4cf6a in QSortFilterProxyModelPrivate::update_source_sort_column() (this=this@entry=0x5555560e8dc0) at itemmodels/qsortfilterproxymodel.cpp:637
#3  0x00007ffff1f4d351 in QSortFilterProxyModelPrivate::_q_clearMapping() (this=this@entry=0x5555560e8dc0) at itemmodels/qsortfilterproxymodel.cpp:486
#4  0x00007ffff1f4d4d9 in QSortFilterProxyModel::invalidate() (this=0x5555560e8da0) at itemmodels/qsortfilterproxymodel.cpp:2918
#5  0x00007fffc10658c8 in Image::nextSlide() (this=0x5555560e5de0) at /home/david/src/kde/kde/workspace/plasma-workspace/wallpapers/image/image.cpp:775
Comment 8 Xwang 2019-10-16 14:46:25 UTC
Yes, I am using random order.
I am still trying to recompile the packages with symbols, but being the first time that I attempt to do that at the moment I'm still facing the problem that the locally compiled package files differ from those of the repository one even before adding the debug option. Probably because I have not compiled in a chroot.
Comment 9 David Redondo 2019-10-16 14:55:59 UTC
For reference the easiest way to reproduce this is to have a slideshow in random order with as few images as possible and a short timeout.
The crash happens sometimes when invalidate() is called to generate a new random order after all images have been shown once.
Comment 10 Xwang 2019-10-16 16:07:57 UTC
(In reply to David Redondo from comment #9)
> For reference the easiest way to reproduce this is to have a slideshow in
> random order with as few images as possible and a short timeout.
> The crash happens sometimes when invalidate() is called to generate a new
> random order after all images have been shown once.

Should I install the debug packages or the info I could obtain doing that is not needed anymore?
Comment 11 Kai Uwe Broulik 2019-10-17 10:38:30 UTC
*** Bug 413068 has been marked as a duplicate of this bug. ***
Comment 12 Kai Uwe Broulik 2019-10-17 10:38:34 UTC
*** Bug 413082 has been marked as a duplicate of this bug. ***
Comment 13 Kai Uwe Broulik 2019-10-17 10:39:23 UTC
*** Bug 412462 has been marked as a duplicate of this bug. ***
Comment 14 Kai Uwe Broulik 2019-10-17 10:39:30 UTC
*** Bug 413016 has been marked as a duplicate of this bug. ***
Comment 15 Kai Uwe Broulik 2019-10-17 10:40:17 UTC
@Xwang: That is not neccessary anymore, we found the reason. Thanks a lot!
Comment 16 Kai Uwe Broulik 2019-10-17 16:40:13 UTC
*** Bug 413099 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2019-10-17 16:43:47 UTC
We are working on a fix for this: https://phabricator.kde.org/D24723
Comment 18 Kai Uwe Broulik 2019-10-18 11:40:30 UTC
*** Bug 413139 has been marked as a duplicate of this bug. ***
Comment 19 Kai Uwe Broulik 2019-10-18 12:09:33 UTC
*** Bug 413140 has been marked as a duplicate of this bug. ***
Comment 20 Rik Mills 2019-10-19 10:14:56 UTC
*** Bug 413166 has been marked as a duplicate of this bug. ***
Comment 21 Rik Mills 2019-10-19 10:15:53 UTC
*** Bug 413159 has been marked as a duplicate of this bug. ***
Comment 22 Rik Mills 2019-10-19 10:16:11 UTC
*** Bug 413141 has been marked as a duplicate of this bug. ***
Comment 23 Rik Mills 2019-10-19 10:18:45 UTC
*** Bug 413059 has been marked as a duplicate of this bug. ***
Comment 24 akm 2019-10-20 04:52:23 UTC
Created attachment 123348 [details]
New crash information added by DrKonqi

plasmashell (5.17.0) using Qt 5.13.1

PC was running during the night, came back in the morning and found full black screen.
kstart plasmashell via yakuake gave me a running desktop back

crash is also listed in systemd log

Process 2352 (plasmashell) of user 1000 dumped core.
                                                
                                                Stack trace of thread 2352:
                                                #0  0x00007f7d2384cd90 n/a (libQt5Core.so.5)
                                                #1  0x00007f7d2385295a n/a (libQt5Core.so.5)
                                                #2  0x00007f7c7d02048a n/a (libplasma_wallpaper_imageplugin.so)
                                                #3  0x00007f7d238a9638 _ZN11QMetaObject8activateEP7QObjectiiPPv (libQt5Core.so.5)
                                                #4  0x00007f7d238a9eea _ZN7QObject5eventEP6QEvent (libQt5Core.so.5)
                                                #5  0x00007f7d24435c62 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5)
                                                #6  0x00007f7d2443f1e0 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt5Widgets.so.5)
                                                #7  0x00007f7d2387e572 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5)
                                                #8  0x00007f7d23881208 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt5Core.so.5)
                                                #9  0x00007f7d238d5343 n/a (libQt5Core.so.5)
                                                #10 0x00007f7d21e9f6b3 g_main_context_dispatch (libglib-2.0.so.0)
                                                #11 0x00007f7d21ea1460 n/a (libglib-2.0.so.0)
                                                #12 0x00007f7d21ea149f g_main_context_iteration (libglib-2.0.so.0)
                                                #13 0x00007f7d238d4981 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5)
                                                #14 0x00007f7d2387d0db _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5)
                                                #15 0x00007f7d23884d42 _ZN16QCoreApplication4execEv (libQt5Core.so.5)
                                                #16 0x000055b34c6dd206 n/a (plasmashell)
                                                #17 0x00007f7d23264e0b __libc_start_main (libc.so.6)
                                                #18 0x000055b34c6dd63a _start (plasmashell)

-- Backtrace (Reduced):
#6  0x00007f0451138d90 in  () at /usr/lib64/libQt5Core.so.5
#7  0x00007f045113e95a in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f03f9c1348a in  () at /usr/lib64/qt5/qml/org/kde/plasma/wallpapers/image/libplasma_wallpaper_imageplugin.so
[...]
#10 0x00007f0451195eea in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#11 0x00007f0451d21c62 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
Comment 25 Rik Mills 2019-10-20 07:50:23 UTC
*** Bug 413219 has been marked as a duplicate of this bug. ***
Comment 26 Alvaro Carroz 2019-10-21 03:00:43 UTC
I think Bug 350148 is also related to this bug. It causes the .xsession-errors to grow to over 20MB just after login.
Comment 27 Kai Uwe Broulik 2019-10-21 06:33:34 UTC
*** Bug 413252 has been marked as a duplicate of this bug. ***
Comment 28 David Redondo 2019-10-21 08:51:26 UTC
Git commit a1cf305ffb21b8ae8bbaf4d6ce03bbaa94cff405 by David Redondo.
Committed on 21/10/2019 at 08:51.
Pushed by davidre into branch 'Plasma/5.17'.

Fix slideshow crashing in invalidate()

Summary:
QSortFilterProxyModel uses std::stable_sort internally which requires that the
comparison function generates a strict weak ordering. Returning true or false
randomly didn't fullfil this requirement causing a crash in some calls to invalidate.
To keep the random order consistent a vector of row indices is used which records
the current random order.
FIXED-IN: 5.17.1

Test Plan:
To reproduce the bug use a slideshow in random order with few pictures and a small
time intervall.

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: davidedmundson, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D24723

M  +1    -1    wallpapers/image/image.cpp
M  +55   -4    wallpapers/image/slidefiltermodel.cpp
M  +6    -1    wallpapers/image/slidefiltermodel.h

https://commits.kde.org/plasma-workspace/a1cf305ffb21b8ae8bbaf4d6ce03bbaa94cff405
Comment 29 Kai Uwe Broulik 2019-10-21 12:41:53 UTC
*** Bug 413225 has been marked as a duplicate of this bug. ***
Comment 30 Christoph Feck 2019-10-22 00:51:37 UTC
*** Bug 413155 has been marked as a duplicate of this bug. ***
Comment 31 Christoph Feck 2019-10-22 00:52:20 UTC
*** Bug 413273 has been marked as a duplicate of this bug. ***
Comment 32 David Edmundson 2019-12-22 12:12:13 UTC
*** Bug 413193 has been marked as a duplicate of this bug. ***